--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hazel-server",
+  "name": "shipxanh-shops-manager-autoupdate",
   "version": "5.1.1",
   "main": "lib/index.js",
   "description": "Lightweight update server for Electron apps",
